[package]
name = "lzma-rs-perf-exp"
description = "A codec for LZMA, LZMA2 and XZ written in pure Rust with performance experiments"
version = "0.2.1"
license = "MIT"
authors = ["Guillaume Endignoux <ggendx@gmail.com>", "Ronny Chan <ronny@ronnychan.ca>"]
repository = "https://github.com/SnowflakePowered/lzma-rs/tree/feature-perf-experiments"
readme = "README.md"
categories = ["compression"]
keywords = ["lzma", "compression", "decompression"]
exclude = ["tests/*", "benches/*", "fuzz/*", ".github/*", "Cargo.lock"]
edition = "2018"

[dependencies]
byteorder = "^1.4.3"
crc = "3.0.0"
log = { version = "^0.4.17", optional = true }
env_logger = { version = "^0.9.0", optional = true }

[dev-dependencies]
rust-lzma = "0.5"
seq-macro = "0.3"

[features]
enable_logging = ["env_logger", "log"]
stream = []
raw_decoder = []

[package.metadata.docs.rs]
features = ["stream", "raw_decoder"]
rustdoc-args = ["--cfg", "docsrs"]
